@startuml

Dame --|> "1\n" Personnage
Cowboy --|> "1\n" Personnage
Brigand --|> "1\n" Personnage
Narrateur --|> "1\n" Personnage
Personnage o-->"1 \n -m_boisson" Boisson
Boisson o-->"1 \n -m_nom" Substantif
Substantif o-->"1 \n -m_genre" "«enumeration» \n Genre"
'Dame <---> Cowboy
Cowboy "1\n -m_capturer"<---> "*\n brigands_captures" Brigand
Brigand "1\n -m_ravisseur"<---> "*\n dames_capturees"Dame

enum "«enumeration» \n Genre" {
FEMININ
MASCULIN
}

class Substantif {

    - m_nom : String
    '- m_genre : Genre
    - voyelles : String[]
    + getNom() : String
    + getGenre() : Substantif

    + «Create»Substantif(nom : String, genre : Genre)

    + getArticleDefini()
    + getNomAvecArticleDefini()
    + getArticleIndefini()
    + getNomAvecArticleIndefini()
    + getArticlePartitif()
    + getNomAvecArticlePartitif()
    + getNomAvecPreposition()

}

class Boisson {
    '- m_nom : Substantif

    + «create» Boisson(nom : String, genre : Genre)
    + getNom(): String
    + getGenre(): Substantif
}
class Personnage<<abstract>>{
    # m_nom : String
    '- m_boisson : Boisson
    # pseudo : String

    + «create» Personnage(nom : String)
    + «create» Personnage(nom : String, boisson_preferee : Boisson)
    + dire(text : String)
    + sePresenter()
    + boire(boisson : Boisson)
    + getNom() : String
    + getPseudo() : String
    + getBoissonPreferee() : Boisson
}

class Cowboy{
    # m_porte_monnaie : Integer
    + «Create»Cowboy(nom : String)
    + «Create»Cowboy(nom : String, boisson_preferee : Boisson)
    + tirerSur(brigand : Brigand)
    + capturer(brigand : Brigand)

}
class Dame{
    - estCaptive : Boolean
    + «Create»Dame(nom : String)
    + «Create»Dame (nom : String, boisson_preferee : Boisson)
    + capturer(b : Brigand)
    + liberer(c : Cowboy)
}
class Brigand{
    - recompense : Integer
    - estCapture = Boolean
    + «Create»Brigand (nom : String)
    + «Create»Brigand (nom : String, boisson_preferee : Boisson)
    + getRecompense() : Integer
    + capturer(c : Cowboy)
    + kidnapper(dame : Dame)
    + liberer_dames (c : Cowboy)
    + getDamesCapturees() : Dame[*]
}
class Narrateur{
    + «Create» Narrateur(nom : String)
    + «Creat» Narrateur(nom : String, boisson_preferee : Boisson)
    + dire(texte :String)
}

@enduml